# FM-Solver

./: 99ab5ddb-e282-4788-8e46-144e05000fc9.json  ipython  marco.py  pyproject.toml  test.py  testz3.py
fm_solver/serialization/: variamos.py
fm_solver/translator/: __init__.py  mini_zinc_arithmetic_translator.py  z3_translator.py
tests/assets/: 1f167196-dd06-4745-8538-87127a0ebc73.json  mobile_phone_feature_model.json
