[tool.poetry]
name = "fm-solver"
version = "0.1.0"
description = ""
authors = ["Francisco J. Piedrahíta-Vélez"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
